# Api_with_Rust

./: .env  .gitignore  README.md  compose.yml
api/: .env-example  Cargo.toml
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20260315_015851_create_user_table.rs
api/schemas/: Cargo.toml
api/schemas/src/: prelude.rs  users.rs
api/src/: db.rs  dto.rs  err_handle.rs  lib.rs  main.rs
api/src/dto/: user_p.rs
