[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = {version ="1.0.228", features =["derive"]}
tokio = { version = "1.50.0", features=["macros", "net", "rt-multi-thread"] }
sea-orm = {version="1.1.19", features=["sqlx-mysql", "runtime-tokio-rustls"]}
schemas = { path ="./schemas"}
validator = { version = "0.20.0", features =["derive"]}
[workspace]
members = ["migration", "schemas"]
